[package]
name = "things"
version = "0.0.1"
authors = ["Jean Mertz <helloworld@rustic.games>"]
license = "MIT OR Apache-2.0"
description = "Entity–Component–System library currently in development"
edition = "2018"

[features]
doc = []

[dependencies]
generational-arena = "0.2"
downcast-rs = "1.0.3"
rustc-hash = "1.0"
parking_lot = "0.7.1"
